[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odeb-solver"
version = "0.1.0"
authors = [
    { name = "UnK Center Inc.", email = "info@unkcenter.com" }
]
description = "Spectral diffusion routing engine for low-memory environments and Edge Computing."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["odeb_solver*"]
